# arcane-hub

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  layout.ld  old_CMakeLists.txt
cmake/cpu/: cortex-m4.cmake
cmake/toolchain/: arm_gcc.cmake  set_flags.cmake
drivers/mcp2515/include/: mcp_can.h  mcp_can_dfs.h
drivers/mcp2515/src/: mcp_can.c
include/: arcane.h  bsp.h  mcp_config.h  tasks.h
include/FreeRTOSConfig/: FreeRTOSConfig.h
linker/: nrf52840.ld  nrf_common.ld  old_nrf52840.ld
src/: arcane.c  bsp.c  cdc.c  freertos_hook.c  main.c  nrfx_config.h  tasks.c  tusb_config.h  usb_descriptors.c
src/arcane/: arcane.c  arcane.h
src/mcp2515/: mcp_can.c  mcp_can.h
